manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: wisecow-ingress
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "buildwithsanchit.me"
      http: 
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wisecow-service
                port:
                  number: 4499
  tls:
    - hosts:
      - buildwithsanchit.me
      secretName: wisecow-tls
